# diskscope

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  LICENSING.md  README.md
.github/: pull_request_template.md
crates/diskscope-cli/: Cargo.toml
crates/diskscope-cli/src/: main.rs
crates/diskscope-core/: Cargo.toml
crates/diskscope-core/src/: events.rs  lib.rs  pro_monitor.rs  scanner.rs  volume.rs
crates/diskscope-egui/: Cargo.toml
crates/diskscope-egui/src/: app.rs  lib.rs  state.rs  treemap.rs
crates/diskscope-ffi/: Cargo.toml
crates/diskscope-ffi/include/: diskscope_ffi.h
crates/diskscope-ffi/src/: lib.rs
docs/: ffi-contract.md  native-macos.md  parity-matrix.md  treemap-ui.md
native/macos/DiskscopeNative/DiskscopeNative/: AppIcon.icns  AppIconDock.icns  ContentView.swift  DiskscopeNative-Bridging-Header.h  DiskscopeNativeApp.swift  Info.plist  NativeScanStore.swift  TreemapView.swift
native/macos/DiskscopeNative/DiskscopeNative.xcodeproj/: project.pbxproj
native/macos/DiskscopeNative/DiskscopeNative.xcodeproj/xcshareddata/xcschemes/: DiskscopeNative.xcscheme
pro/: README.md
scripts/: install-native-app.sh  macos-icon-tool.swift
src/: main.rs
src/core/: events.rs  model.rs  scanner.rs  volume.rs
src/ui/: app.rs  state.rs  treemap.rs
ui/: README.md  app.js  index.html  styles.css
