[workspace]
members = [
  "crates/diskscope-core",
  "crates/diskscope-egui",
  "crates/diskscope-cli",
  "crates/diskscope-ffi",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Low-memory disk scanner inspired by Disk Inventory X"

[workspace.dependencies]
crossbeam-channel = "0.5"
eframe = { version = "0.29", default-features = true }
globset = "0.4"
libc = "0.2"
